# aiki

./: .gitignore  AGENTS.md  ANALYSIS_PROTOCOL_USAGE.md  CLAUDE.md  Cargo.toml  EXPRESSIONS.md  OPTIMIZATION_SUMMARY.md  README.md  RELEASING.md  bench-tests.sh  conflict.txt  dist-workspace.toml  latest  plan.md  summary.md
.aiki/: .gitignore  (+3 more)
cli/: .sync-action-check  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASING.md  disable_broken_tests.sh  test_blame.txt
cli/.cargo/: config.toml
cli/.jj/working_copy/: checkout
cli/benches/: README.md  commit_cache_keys.rs  flow_performance.rs  isolation_benchmarks.rs  provenance_comparison.rs  task_benchmarks.rs
cli/docs/: aiki-for-clawbots.md  contributing.md  creating-plugins.md  customizing-defaults.md  getting-started.md  sdlc.md  session-isolation-workflow.md  session-isolation.md
cli/docs/sdlc/: build.md  decompose.md  fix.md  loop.md  plan.md  review.md
cli/docs/tasks/: kinds.md  links.md  templates.md
cli/flows/: core.yaml  provenance.yaml
cli/src/: CLAUDE.md  authors.rs  blame.rs  cache.rs  config.rs  db.rs  error.rs  event_bus.rs  events.rs  global.rs  handlers.rs  ide_config.rs  jj.rs  lib.rs  main.rs  npm.rs  output_utils.rs  prerequisites.rs  provenance.rs  record_change.rs  session.rs  test_must_use.rs  tools.rs  validation.rs  verify.rs
cli/src/acp/: protocol.rs
cli/src/agents/: mod.rs  types.rs
cli/src/commands/: acp.rs  agents_template.rs  async_spawn.rs  authors.rs  benchmark.rs  blame.rs  build.rs  conversation.rs  decompose.rs  doctor.rs  epic.rs  event.rs  explore.rs  fix.rs  hooks.rs  init.rs  loop_cmd.rs  mod.rs  otel_receive.rs  output.rs  plan.rs  plugin.rs  resolve.rs  review.rs  run.rs  session.rs  spec.rs  status.rs  task.rs  wait.rs  zed_detection.rs
cli/src/editors/: mod.rs  zed.rs
cli/src/events/: change_completed.rs  change_done.rs  change_permission_asked.rs  commit_message_started.rs  delete_completed.rs  delete_permission_asked.rs  file_completed.rs  mcp_completed.rs  mcp_permission_asked.rs  mod.rs  post_file_change.rs  post_response.rs  pre_file_change.rs  pre_prompt.rs  prelude.rs  prepare_commit_msg.rs  prompt_submitted.rs  read_completed.rs  read_permission_asked.rs  repo_changed.rs  response.rs  response_received.rs  session_compacted.rs  session_end.rs  session_ended.rs  session_resumed.rs  session_start.rs  session_started.rs  session_will_compact.rs  shell_completed.rs  shell_permission_asked.rs  task_closed.rs  task_started.rs  turn_completed.rs  turn_started.rs  web_completed.rs  web_permission_asked.rs  write_completed.rs  write_permission_asked.rs
cli/src/expressions/: mod.rs  tests.rs
cli/src/flows/: bundled.rs  composer.rs  context.rs  engine.rs  executor.rs  flow_resolver.rs  hook_resolver.rs  loader.rs  messages.rs  mod.rs  parser.rs  path_resolver.rs  state.rs  sugar.rs  test_migrations_needed.txt  types.rs  variables.rs
cli/src/history/: mod.rs  recorder.rs  storage.rs  types.rs
cli/src/jj/: diff.rs  mod.rs  workspace.rs
cli/src/parsing/: interpolation.rs
cli/src/plans/: graph.rs  mod.rs  parser.rs
cli/src/plugins/: git.rs  mod.rs  project.rs  scanner.rs
cli/src/provenance/: blame.rs  mod.rs  record.rs
cli/src/repos/: detector.rs  id.rs  mod.rs
cli/src/session/: AGENTS.md  isolation.rs  mod.rs  turn_state.rs
cli/src/signing/: config.rs  setup_wizard.rs
cli/src/specs/: mod.rs
cli/src/tasks/: README  engine.rs  graph.rs  id.rs  lanes.rs  manager.rs  md.rs  mod.rs  runner.rs  spawner.rs  status_monitor.rs  storage.rs  types.rs  xml.rs
cli/src/tui/: AGENTS.md  app.rs  buffer_ansi.rs  builder.rs  chat_builder.rs  components.rs  live_screen.rs  mod.rs  panic_hook.rs  render.rs  theme.rs  types.rs
cli/src/utils/: frontmatter.rs  mod.rs  panic.rs
cli/templates/: prepare-commit-msg.sh
cli/tests/: TEST_ACP_SESSION_FLOW.md  blame_tests.rs  claude_integration_test.rs  end_to_end_tests.rs  git_hooks_tests.rs  multi_editor_tests.rs  record_change_tests.rs  stderr_guardrail.rs  task_tests.rs  test_acp_session_flow.rs  test_advance_bookmark.rs  test_async_tasks.rs  test_codex_hooks.rs  test_declarative_subtasks.rs  test_end_to_end_flow.rs  test_event_storage.rs  test_flow_statements.rs  test_flow_yaml.yaml  test_flow_yaml_parsing.rs  test_history_recorder.rs  test_plugins.rs  test_post_response.rs  test_session_end.rs  test_spawn_flow.rs  test_task_events.rs  test_timing_infrastructure.rs  tui_screen_states.rs  tui_snapshot_tests.rs  tui_visual_verify.rs  verify_tests.rs
tbench/: README.md  aiki-setup.sh.j2  aiki_agent.py  pyproject.toml
tbench/scripts/: compare.sh  prebuild.sh  run.sh
(+1224 files in other folders)
