[package]
name = "aiki"
version = "0.1.0"
edition = "2021"

[lib]
name = "aiki"
path = "src/lib.rs"

[[bin]]
name = "aiki"
path = "src/main.rs"

[[bench]]
name = "task_benchmarks"
harness = false

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
jj-lib = "0.35.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
dirs = "5.0"
sysinfo = "0.32"
atty = "0.2"
shell-words = "1.1"
agent-client-protocol = "0.7"
which = "6.0"
uuid = { version = "1.0", features = ["v5"] }
globset = "0.4"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
criterion = "0.5"
